--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MemoryCleaner</string>
-    <string name="title_activity_main_scrolling">MyMemory 0.99</string>
+    <string name="title_activity_main_scrolling">MyMemory 1.0</string>
     <string name="large_text">
         "Click on play for memory analysis!\n\n"
     </string>
@@ -13,4 +13,5 @@
     <string name="Permissions_denied">Permissions denied!</string>
     <string name="Permissions_denied_explain">Some of permissions were denied!</string>
     <string name="Analysing">Analysing...</string>
+    <string name="test_only">Test only</string>
 </resources>
